--- a/public/scss/_helper.scss
+++ b/public/scss/_helper.scss
@@ -21,28 +21,28 @@
   margin-top: 3.5rem;
 }
 .mt-xl {
-  margin-top: 6vw;
+  margin-top: 6rem;
 }
 .mb-s {
-  margin-bottom: 1.3vw;
+  margin-bottom: 1.3rem;
 }
 .mb-m {
-  margin-bottom: 2vw;
+  margin-bottom: 2rem;
 }
 .mb-xl {
   margin-bottom: 6rem;
 }
 .mb-l {
-  margin-bottom: 3.5vw;
+  margin-bottom: 3.5rem;
 }
 .ml-s {
-  margin-left: 1vw;
+  margin-left: 1rem;
 }
 .ml-m {
-  margin-left: 2vw;
+  margin-left: 2rem;
 }
 .ml-l {
-  margin-left: 3.5vw;
+  margin-left: 3.5rem;
 }
 .m-hide {
   @media only screen and (max-width: $mobile-breakpoint) {
